--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,91 @@
     android:layout_height="match_parent"
     tools:context="com.example.ahsanulhoque.finoffer.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="15dp"
+        android:ems="10"
+        android:orientation="vertical">
+        <EditText
+            android:id="@+id/productName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_gravity="top"
+            android:inputType="textPersonName"
+            android:text=""
+            android:hint="Product Name"/>
+
+        <EditText
+            android:id="@+id/productDescription"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="80dp"
+            android:inputType="textPersonName"
+            android:text=""
+            android:hint="Product Description"/>
+
+        <EditText
+            android:id="@+id/regularPrice"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="150dp"
+            android:inputType="textPersonName"
+            android:text=""
+            android:hint="Regular Price" />
+        <EditText
+            android:id="@+id/discusntIn"
+            android:layout_width="180dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="230dp"
+            android:inputType="textPersonName"
+            android:text=""
+            android:hint="Discusnt in %"/>
+        <EditText
+            android:id="@+id/price"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="190dp"
+            android:layout_marginTop="230dp"
+            android:inputType="textPersonName"
+            android:text=""
+            android:hint="price"/>
+        <EditText
+            android:id="@+id/location"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="300dp"
+            android:inputType="textPersonName"
+            android:text=""
+            android:hint="Location"/>
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="130dp"
+            android:layout_height="130dp"
+            android:layout_marginTop="340dp"
+            android:layout_below="@+id/editText"
+            app:srcCompat="@android:drawable/ic_menu_report_image" />
+
+        <Button
+            android:id="@+id/addImage"
+            android:layout_width="120dp"
+            android:layout_height="56dp"
+            android:layout_marginTop="380dp"
+            android:layout_marginLeft="220dp"
+            android:layout_below="@+id/editText"
+            android:text="Add Image" />
+        <Button
+            android:id="@+id/button"
+            android:layout_width="match_parent"
+            android:layout_height="56dp"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="470dp"
+            android:layout_below="@+id/editText"
+            android:text="Import Product" />
+
+    </RelativeLayout>
 
 </android.support.constraint.ConstraintLayout>
