--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,13 +40,13 @@
             android:text=""
             android:hint="Regular Price" />
         <EditText
-            android:id="@+id/discusntIn"
+            android:id="@+id/discountIn"
             android:layout_width="180dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="230dp"
             android:inputType="textPersonName"
             android:text=""
-            android:hint="Discusnt in %"/>
+            android:hint="Discount in %"/>
         <EditText
             android:id="@+id/price"
             android:layout_width="150dp"
@@ -70,7 +70,6 @@
             android:layout_width="130dp"
             android:layout_height="130dp"
             android:layout_marginTop="340dp"
-            android:layout_below="@+id/editText"
             app:srcCompat="@android:drawable/ic_menu_report_image" />
 
         <Button
@@ -79,7 +78,6 @@
             android:layout_height="56dp"
             android:layout_marginTop="380dp"
             android:layout_marginLeft="220dp"
-            android:layout_below="@+id/editText"
             android:text="Add Image" />
         <Button
             android:id="@+id/button"
@@ -88,7 +86,6 @@
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
             android:layout_marginTop="470dp"
-            android:layout_below="@+id/editText"
             android:text="Import Product" />
 
     </RelativeLayout>
