--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,63 +7,71 @@
     tools:context="com.example.ahsanulhoque.finoffer.MainActivity">
 
     <RelativeLayout
+        android:id="@+id/relativeLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="15dp"
         android:ems="10"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        app:layout_constraintBottom_toTopOf="parent"
+        app:layout_constraintEnd_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
         <EditText
             android:id="@+id/productName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
             android:layout_gravity="top"
+            android:layout_marginTop="20dp"
+            android:hint="Product Name"
             android:inputType="textPersonName"
-            android:text=""
-            android:hint="Product Name"/>
+            android:text="" />
 
         <EditText
             android:id="@+id/productDescription"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="80dp"
+            android:hint="Product Description"
             android:inputType="textPersonName"
-            android:text=""
-            android:hint="Product Description"/>
+            android:text="" />
 
         <EditText
             android:id="@+id/regularPrice"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="150dp"
+            android:hint="Regular Price"
             android:inputType="textPersonName"
-            android:text=""
-            android:hint="Regular Price" />
+            android:text="" />
+
         <EditText
             android:id="@+id/discountIn"
             android:layout_width="180dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="230dp"
+            android:hint="Discount in %"
             android:inputType="textPersonName"
-            android:text=""
-            android:hint="Discount in %"/>
+            android:text="" />
+
         <EditText
             android:id="@+id/price"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="190dp"
             android:layout_marginTop="230dp"
+            android:hint="price"
             android:inputType="textPersonName"
-            android:text=""
-            android:hint="price"/>
+            android:text="" />
+
         <EditText
             android:id="@+id/location"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="300dp"
+            android:hint="Location"
             android:inputType="textPersonName"
-            android:text=""
-            android:hint="Location"/>
+            android:text="" />
 
         <ImageView
             android:id="@+id/imageView"
@@ -76,11 +84,12 @@
             android:id="@+id/addImage"
             android:layout_width="120dp"
             android:layout_height="56dp"
-            android:layout_marginTop="380dp"
             android:layout_marginLeft="220dp"
+            android:layout_marginTop="380dp"
             android:text="Add Image" />
+
         <Button
-            android:id="@+id/button"
+            android:id="@+id/addProduct"
             android:layout_width="match_parent"
             android:layout_height="56dp"
             android:layout_alignParentEnd="true"
