--- a/app/src/main/res/layout/main_fin_offer.xml
+++ b/app/src/main/res/layout/main_fin_offer.xml
@@ -1,9 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/colorPrimaryBack">
 
-    <include layout="@layout/custom_tool_bar"/>
+    <include layout="@layout/custom_tool_bar" />
 
-</LinearLayout>
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/itemlist"
+        android:scrollbars="vertical"
+        android:layout_width="wrap_content"
+        android:layout_height="300dp"
+        app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
+        tools:layoutManager="android.support.v7.widget.LinearLayoutManager"
+        android:layout_marginTop="15dp"
+        tools:ignore="NotSibling" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/itemlist">
+        <TextView
+            android:id="@+id/middleline"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="SHOPS"
+            android:textAllCaps="true"
+            android:layout_marginTop="15dp"
+            android:layout_marginLeft="15dp"
+            android:textAlignment="center"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/middleline"
+            android:layout_alignStart="@+id/middleline"
+            android:background="@drawable/strike_through"
+            android:gravity="start"
+            android:layout_marginLeft="60dp"
+            android:layout_marginTop="15dp"/>
+
+</RelativeLayout>
+
+</android.support.constraint.ConstraintLayout>
