--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#FF4081</color>
     <color name="colorPrimaryWhite">#FFFFFF</color>
     <color name="colorActionbar">#FF9800</color>
+    <color name="colorPrimaryBack">#eeeeee</color>
+
 </resources>
