--- a/app/src/main/res/layout/main_fin_offer.xml
+++ b/app/src/main/res/layout/main_fin_offer.xml
@@ -11,15 +11,15 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/itemlist"
-        android:scrollbars="vertical"
         android:layout_width="wrap_content"
+        android:orientation="vertical"
         android:layout_height="300dp"
         app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
         tools:layoutManager="android.support.v7.widget.LinearLayoutManager"
-        android:layout_marginTop="15dp"
-        tools:ignore="NotSibling" />
+        android:layout_marginTop="15dp"/>
 
     <RelativeLayout
+        android:id="@+id/midLine"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/itemlist">
@@ -42,6 +42,16 @@
             android:layout_marginLeft="60dp"
             android:layout_marginTop="15dp"/>
 
-</RelativeLayout>
+    </RelativeLayout>
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/brandList"
+        android:orientation="horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="15dp"
+        app:layout_constraintTop_toBottomOf="@+id/midLine"
+        tools:layoutManager="android.support.v7.widget.LinearLayoutManager"
+        android:layout_marginTop="15dp" />
 
 </android.support.constraint.ConstraintLayout>
