--- a/app/src/main/res/layout/main_fin_offer.xml
+++ b/app/src/main/res/layout/main_fin_offer.xml
@@ -54,4 +54,120 @@
         tools:layoutManager="android.support.v7.widget.LinearLayoutManager"
         android:layout_marginTop="15dp" />
 
+
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/footerView"
+        android:layout_width="match_parent"
+        android:layout_height="90dp"
+        android:orientation="vertical"
+        android:layout_marginTop="30dp"
+        android:background="@color/colorPrimaryWhite"
+        app:layout_constraintTop_toBottomOf="@+id/brandList">
+
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <ImageView
+                android:id="@+id/firstIMGV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginLeft="16dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="11dp"
+                app:srcCompat="@drawable/lockicon" />
+
+            <ImageView
+                android:id="@+id/secndIMGV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignTop="@+id/firstIMGV"
+                android:layout_marginLeft="65dp"
+                android:layout_marginStart="65dp"
+                android:layout_toEndOf="@+id/firstIMGV"
+                android:layout_toRightOf="@+id/firstIMGV"
+                android:paddingLeft="18dp"
+                app:srcCompat="@drawable/lockicon" />
+
+            <ImageView
+                android:id="@+id/thrdIMGV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignTop="@+id/secndIMGV"
+                android:layout_marginLeft="65dp"
+                android:layout_marginStart="65dp"
+                android:layout_toEndOf="@+id/secndIMGV"
+                android:layout_toRightOf="@+id/secndIMGV"
+                android:paddingLeft="15dp"
+                app:srcCompat="@drawable/lockicon" />
+
+            <ImageView
+                android:id="@+id/frthIMGV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignTop="@+id/thrdIMGV"
+                android:layout_marginEnd="30dp"
+                android:layout_marginRight="30dp"
+                app:srcCompat="@drawable/lockicon" />
+
+            <TextView
+                android:id="@+id/frstTV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/firstIMGV"
+                android:layout_marginTop="15dp"
+                android:textAlignment="center"
+                android:layout_marginLeft="20dp"
+                android:text="All" />
+
+            <TextView
+                android:id="@+id/scndTV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBaseline="@+id/frstTV"
+                android:layout_alignBottom="@+id/frstTV"
+                android:layout_alignLeft="@+id/secndIMGV"
+                android:layout_alignStart="@+id/secndIMGV"
+                android:layout_marginLeft="15dp"
+                android:text="Food" />
+
+            <TextView
+                android:id="@+id/thrdTV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBaseline="@+id/scndTV"
+                android:layout_alignBottom="@+id/scndTV"
+                android:layout_alignLeft="@+id/thrdIMGV"
+                android:layout_alignStart="@+id/thrdIMGV"
+                android:textAlignment="center"
+                android:text="Clothing" />
+
+            <TextView
+                android:id="@+id/textView7"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginEnd="15dp"
+                android:layout_marginRight="15dp"
+                android:layout_alignTop="@+id/thrdTV"
+                android:text="Electronics" />
+        </RelativeLayout>
+    </android.support.constraint.ConstraintLayout>
+
+
+
+
 </android.support.constraint.ConstraintLayout>
