--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:android="http://schemas.android.com/tools">
     <color name="colorPrimary">#3F51B5</color>
+    <color name="colorBaseWhite">#eeeeee</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="colorPrimaryWhite">#FFFFFF</color>
     <color name="colorActionbar">#FF9800</color>
     <color name="colorPrimaryBack">#eeeeee</color>
-
+    <color name="colorBrandOrange">#ff9800</color>
+    <color name="colorText">#838383</color>
 </resources>
