--- a/app/src/main/res/layout/add_product.xml
+++ b/app/src/main/res/layout/add_product.xml
@@ -1,9 +1,27 @@
-<?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/addp_drawer_layout"
+    android:fitsSystemWindows="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.ahsanulhoque.finoffer.AddProduct">
+    tools:openDrawer="start">
 
-</android.support.constraint.ConstraintLayout>
+
+        <include layout="@layout/landig_add_product" />
+
+
+
+    <android.support.design.widget.NavigationView
+        android:id="@+id/navVW"
+        app:headerLayout="@layout/drawerheader"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:background="@color/colorPrimaryWhite"
+        app:itemTextColor="#000000"
+        app:itemIconTint="@color/colorPrimaryDark"
+        app:menu="@menu/drawermenu"
+        android:layout_gravity="start"/>
+
+</android.support.v4.widget.DrawerLayout>
