--- a/app/src/main/res/layout/custom_tool_bar.xml
+++ b/app/src/main/res/layout/custom_tool_bar.xml
@@ -4,8 +4,7 @@ android:layout_width="match_parent"
 android:layout_height="70dp"
 android:background="@color/colorActionbar"
 android:fitsSystemWindows="true"
-xmlns:android="http://schemas.android.com/apk/res/android"
->
+xmlns:android="http://schemas.android.com/apk/res/android">
 
 <LinearLayout
     android:layout_width="match_parent"
