--- a/app/src/main/res/layout/landing_page.xml
+++ b/app/src/main/res/layout/landing_page.xml
@@ -66,7 +66,7 @@
 
 
         <RelativeLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -80,34 +80,32 @@
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
-                android:layout_marginLeft="16dp"
-                android:layout_marginStart="16dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginStart="20dp"
                 android:layout_marginTop="11dp"
-                android:src="@drawable/lockicon" />
+                android:src="@drawable/menu_all" />
 
             <ImageView
                 android:id="@+id/secndIMGV"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignTop="@+id/firstIMGV"
-                android:layout_marginLeft="65dp"
-                android:layout_marginStart="65dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginStart="20dp"
                 android:layout_toEndOf="@+id/firstIMGV"
                 android:layout_toRightOf="@+id/firstIMGV"
-                android:paddingLeft="18dp"
-                android:src="@drawable/lockicon" />
+                android:src="@drawable/menu_food" />
 
             <ImageView
                 android:id="@+id/thrdIMGV"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignTop="@+id/secndIMGV"
-                android:layout_marginLeft="65dp"
-                android:layout_marginStart="65dp"
-                android:layout_toEndOf="@+id/secndIMGV"
-                android:layout_toRightOf="@+id/secndIMGV"
-                android:paddingLeft="15dp"
-                android:src="@drawable/lockicon" />
+                android:layout_marginEnd="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_toLeftOf="@+id/frthIMGV"
+                android:layout_toStartOf="@+id/frthIMGV"
+                android:src="@drawable/menu_clothing" />
 
             <ImageView
                 android:id="@+id/frthIMGV"
@@ -116,54 +114,11 @@
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
                 android:layout_alignTop="@+id/thrdIMGV"
-                android:layout_marginEnd="30dp"
-                android:layout_marginRight="30dp"
-                android:src="@drawable/lockicon" />
+                android:layout_marginEnd="20dp"
+                android:layout_marginRight="20dp"
+                android:src="@drawable/menu_electronics" />
 
-            <TextView
-                android:id="@+id/frstTV"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_below="@+id/firstIMGV"
-                android:layout_marginTop="15dp"
-                android:textAlignment="center"
-                android:layout_marginLeft="20dp"
-                android:text="All" />
 
-            <TextView
-                android:id="@+id/scndTV"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignBaseline="@+id/frstTV"
-                android:layout_alignBottom="@+id/frstTV"
-                android:layout_alignLeft="@+id/secndIMGV"
-                android:layout_alignStart="@+id/secndIMGV"
-                android:layout_marginLeft="15dp"
-                android:text="Food" />
-
-            <TextView
-                android:id="@+id/thrdTV"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignBaseline="@+id/scndTV"
-                android:layout_alignBottom="@+id/scndTV"
-                android:layout_alignLeft="@+id/thrdIMGV"
-                android:layout_alignStart="@+id/thrdIMGV"
-                android:textAlignment="center"
-                android:text="Clothing" />
-
-            <TextView
-                android:id="@+id/textView7"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:layout_marginEnd="15dp"
-                android:layout_marginRight="15dp"
-                android:layout_alignTop="@+id/thrdTV"
-                android:text="Electronics" />
         </RelativeLayout>
     </android.support.constraint.ConstraintLayout>
 </android.support.constraint.ConstraintLayout>
