--- a/app/src/main/res/menu/drawermenu.xml
+++ b/app/src/main/res/menu/drawermenu.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-<item android:id="@+id/dash" android:title="Dashboard" android:icon="@drawable/home"/>
+<item android:id="@+id/dash" android:title="Home" android:icon="@drawable/home"/>
 <item android:id="@+id/addPRD" android:title="Add Products" android:icon="@drawable/more_app"/>
-<item android:id="@+id/stng" android:title="Setting" android:icon="@drawable/home"/>
-<item android:id="@+id/lgot" android:title="logout" android:icon="@drawable/home"/>
+<item android:id="@+id/about" android:title="About" android:icon="@drawable/info"/>
+<item android:id="@+id/faq" android:title="Faq" android:icon="@drawable/faq"/>
+<item android:id="@+id/lgot" android:title="Logout" android:icon="@drawable/sign_out"/>
 </menu>
