--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -18,11 +17,10 @@
         android:background="@color/colorPrimaryWhite"
         tools:layout_editor_absoluteX="8dp"
         android:padding="4dp"
-        tools:layout_editor_absoluteY="8dp"
-        tools:ignore="MissingConstraints">
+        tools:layout_editor_absoluteY="8dp">
 
         <ImageView
-            android:id="@+id/imageView7"
+            android:id="@+id/bgIMGV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
@@ -37,12 +35,12 @@
             android:id="@+id/textView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignTop="@+id/imageView7"
+            android:layout_alignTop="@+id/bgIMGV"
             android:layout_marginLeft="10dp"
             android:layout_marginStart="30dp"
             android:layout_marginTop="10dp"
-            android:layout_toEndOf="@+id/imageView7"
-            android:layout_toRightOf="@+id/imageView7"
+            android:layout_toEndOf="@+id/bgIMGV"
+            android:layout_toRightOf="@+id/bgIMGV"
             android:text="FRESH PIZZA"
             android:textColor="@color/colorBrandOrange"
             android:textSize="15dp" />
@@ -58,33 +56,33 @@
             android:text="Check website for latest pricing and availability" />
 
         <ImageView
-            android:id="@+id/imageView12"
+            android:id="@+id/locationIMGV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/imageView7"
+            android:layout_alignBottom="@+id/bgIMGV"
             android:layout_alignLeft="@+id/textView3"
             android:layout_alignStart="@+id/textView3"
             android:layout_marginTop="15dp"
-            android:src="@drawable/placeholder" />
+            android:src="@drawable/loationplaceholder" />
 
         <TextView
             android:id="@+id/textView5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignTop="@+id/imageView12"
+            android:layout_alignTop="@+id/locationIMGV"
             android:layout_marginLeft="10dp"
             android:layout_marginStart="25dp"
-            android:layout_toEndOf="@+id/imageView12"
-            android:layout_toRightOf="@+id/imageView12"
+            android:layout_toEndOf="@+id/locationIMGV"
+            android:layout_toRightOf="@+id/locationIMGV"
             android:text="Tokmani,Oulu" />
 
         <TextView
             android:id="@+id/textView6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/imageView12"
-            android:layout_alignStart="@+id/imageView12"
-            android:layout_below="@+id/imageView12"
+            android:layout_alignLeft="@+id/locationIMGV"
+            android:layout_alignStart="@+id/locationIMGV"
+            android:layout_below="@+id/locationIMGV"
             android:layout_marginTop="15dp"
             android:text="€ 1.9" />
 
@@ -109,24 +107,24 @@
            android:layout_marginLeft="15dp">
 
            <ImageView
-               android:id="@+id/imagepg1"
+               android:id="@+id/smllIMGV1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
-               android:background="@drawable/productpg"/>
+               android:src="@drawable/productpg"/>
 
            <ImageView
-               android:id="@+id/imagepg2"
+               android:id="@+id/smllIMGV2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
-               android:background="@drawable/productpg"/>
+               android:src="@drawable/productpg"/>
 
            <ImageView
-               android:id="@+id/imagepg3"
+               android:id="@+id/smllIMGV3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="90dp"
-               android:background="@drawable/productpg"/>
+               android:src="@drawable/productpg"/>
        </RelativeLayout>
     </RelativeLayout>
 
@@ -142,13 +140,12 @@
         tools:layout_editor_absoluteY="206dp">
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/textView21"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-
             android:text="SIMILAR PRODUCTS"
             android:textColor="@color/colorText"
             android:textSize="15dp" />
