--- a/app/src/main/res/layout/main_fin_offer.xml
+++ b/app/src/main/res/layout/main_fin_offer.xml
@@ -6,7 +6,8 @@
         android:fitsSystemWindows="true"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:openDrawer="start">
+        tools:openDrawer="start"
+        tools:context=".landingpage.MainFinOffer">
 
         <LinearLayout
             android:layout_width="match_parent"
