--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBaseWhite"
-    tools:context="com.example.ahsanulhoque.finoffer.ProductDetails">
+    tools:context="com.example.ahsanulhoque.finoffer.activity.core.ProductDetails">
 <RelativeLayout
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
