layout landing page broken layout fixed

--- a/app/src/main/res/layout/per_item.xml
+++ b/app/src/main/res/layout/per_item.xml
@@ -86,14 +86,10 @@
             android:id="@+id/newPriceTV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBaseline="@+id/priceTV"
-            android:layout_alignBottom="@+id/priceTV"
-            android:layout_alignEnd="@+id/locationTV"
-            android:layout_alignRight="@+id/locationTV"
-            android:paddingLeft="20dp"
-            android:paddingRight="20dp"
             android:text="$ 1.50"
             android:textSize="18sp"
+            android:layout_marginLeft="80dp"
+            android:layout_marginTop="70dp"
             android:background="@color/colorActionbar"
             android:textColor="@color/colorPrimaryWhite"
             android:textStyle="bold" />
