--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -5,6 +5,9 @@
     android:layout_height="match_parent"
     android:background="@color/colorBaseWhite"
     tools:context="com.example.ahsanulhoque.finoffer.activity.core.ProductDetails">
+
+    <include layout="@layout/custom_tool_bar"></include>
+
 <RelativeLayout
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
@@ -13,11 +16,13 @@
         android:id="@id/pDetailsArea"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:background="@color/colorPrimaryWhite"
         tools:layout_editor_absoluteX="8dp"
         android:padding="4dp"
-        tools:layout_editor_absoluteY="8dp">
+        tools:layout_editor_absoluteY="8dp"
+        android:layout_marginTop="80dp">
 
         <ImageView
             android:id="@+id/bgIMGV"
