--- a/app/src/main/res/layout/brand_item.xml
+++ b/app/src/main/res/layout/brand_item.xml
@@ -22,7 +22,11 @@
         android:id="@+id/brandTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="brand1"/>
+        android:layout_marginTop="80dp"
+        android:gravity="center"
+        android:textAlignment="center"
+        android:layout_marginLeft="50dp"
+        android:textColor="@color/colorBrandOrange" />
 
 
 </RelativeLayout>
