--- a/app/src/main/res/layout/landing_page.xml
+++ b/app/src/main/res/layout/landing_page.xml
@@ -28,6 +28,7 @@
         android:layout_alignRight="@+id/itemlist"
         android:layout_alignEnd="@+id/itemlist"
         android:layout_marginTop="10dp"
+        android:theme="@style/AppTheme.AccentActionBar"
         android:ems="15"/>
 
     <RelativeLayout
@@ -104,8 +105,8 @@
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
-                android:layout_marginLeft="20dp"
-                android:layout_marginStart="20dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginStart="15dp"
                 android:layout_marginTop="11dp"
                 android:src="@drawable/menu_all" />
 
@@ -114,8 +115,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignTop="@+id/firstIMGV"
-                android:layout_marginLeft="20dp"
-                android:layout_marginStart="20dp"
+                android:layout_marginLeft="3dp"
+                android:layout_marginStart="3dp"
                 android:layout_toEndOf="@+id/firstIMGV"
                 android:layout_toRightOf="@+id/firstIMGV"
                 android:src="@drawable/menu_food" />
@@ -126,7 +127,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignTop="@+id/secndIMGV"
                 android:layout_marginEnd="20dp"
-                android:layout_marginRight="20dp"
+                android:layout_marginRight="15dp"
                 android:layout_toLeftOf="@+id/frthIMGV"
                 android:layout_toStartOf="@+id/frthIMGV"
                 android:src="@drawable/menu_clothing" />
