--- a/app/src/main/res/layout/per_item.xml
+++ b/app/src/main/res/layout/per_item.xml
@@ -85,6 +85,7 @@
         <TextView
             android:id="@+id/newPriceTV"
             android:layout_width="wrap_content"
+            android:minWidth="90dp"
             android:layout_height="wrap_content"
             android:text="$ 1.50"
             android:textSize="18sp"
@@ -92,6 +93,7 @@
             android:layout_marginTop="70dp"
             android:background="@color/colorActionbar"
             android:textColor="@color/colorPrimaryWhite"
+            android:textAlignment="center"
             android:textStyle="bold" />
     </RelativeLayout>
 </RelativeLayout>
